# clazy

./: .arcconfig  .cmake_has_filesystem_test.cpp  .cmake_has_regex_test.cpp  .editorconfig  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .uncrustify  AccessSpecifierManager.cpp  AccessSpecifierManager.h  CMakeLists.txt  CMakePresets.json  COPYING  Changelog  CheckSources.cmake  CheckSources.generated.cmake  Clazy.cpp  ClazyMSVCSupport.cmake  ClazySources.cmake  ClazyTestPrefix.cmake  ClazyTests.cmake  ClazyTests.generated.cmake  ContextUtils.cpp  ContextUtils.h  FixItUtils.cpp  FixItUtils.h  HOWTO  HOWTO.md  HierarchyUtils.cpp  HierarchyUtils.h  Lazy.cpp  LoopUtils.cpp  LoopUtils.h  MacroUtils.cpp  MacroUtils.h  MethodSignatureUtils.h  MoreWarningsPlugin.cpp  PreProcessorVisitor.cpp  PreProcessorVisitor.h  QtUtils.cpp  (+37 more)
.reuse/: dep5
artwork/: clazy.svgz
checks/: README-auto-unexpected-qstringbuilder  README-container-anti-pattern  README-detaching-member  README-detaching-temporary  README-foreach  README-function-args-by-ref  README-function-args-by-value  README-inefficient-qlist  README-isempty-vs-count  README-lambda-in-connect  README-missing-qobject  README-missing-type-info  README-non-pod-global-static  README-onlywritten  README-qdatetime-utc  README-qdeleteall  README-qfileinfo-exists  README-qgetenv  README-qset-intersects  README-qstring-allocations  README-qstring-insensitive-allocation  README-qstring-left  README-qstring-ref  README-qstring-uneeded-heap-allocations  README-qstringarg  README-qstringref  README-qt4-qstring-from-array  README-range-loop  README-reservecandidates  README-rule-of-three  README-rule-of-two-soft  README-temporaryiterator  README-variant-template-instantiation  README-variantsanitizer  README-writing-to-temporary  README-wrong-qglobalstatic  assertwithsideeffects.cpp  assertwithsideeffects.h  autounexpectedqstringbuilder.cpp  autounexpectedqstringbuilder.h  (+111 more)
checks/hiddenlevel/: README-inefficient-qlist  README-isempty-vs-count  README-qt4-qstring-from-array.md  inefficientqlist.h  isempty-vs-count.h  qt4-qstring-from-array.h  tr-non-literal.cpp
checks/level0/: README-connect-non-signal.md  README-container-anti-pattern  README-container-anti-pattern.md  README-lambda-in-connect.md  README-qdatetime-utc.md  README-qmap-with-key-pointer  README-qmap-with-key-pointer.md  README-qmap-with-pointer-key.md  README-qstring-arg.md  README-qstring-insensitive-allocation  README-qstring-insensitive-allocation.md  README-qstring-ref.md  README-qvariant-template-instantiation.md  README-temporary-iterator.md  README-unused-non-trivial-variable  README-unused-non-trivial-variable.md  README-variant-template-instantiation.md  README-writing-to-temporary  README-wrong-qglobalstatic.md  connect-non-signal.cpp  connect-non-signal.h  container-anti-pattern.h  lambda-in-connect.h  mutable-container-key.cpp  mutable-container-key.h  qenums.cpp  qenums.h  qfileinfo-exists.cpp  qmap-with-pointer-key.cpp  qstring-insensitive-allocation.h  qstringarg.cpp  qstringarg.h  qstringref.cpp  qt-macros.cpp  qt-macros.h  unused-non-trivial-variable.h  writingtotemporary.cpp  writingtotemporary.h
checks/level1/: README-auto-unexpected-qstringbuilder  README-auto-unexpected-qstringbuilder.md  README-base-class-event.md  README-copyable-polymorphic.md  README-detaching-temporary.md  README-foreach.md  README-inefficient-qlist-soft  README-inefficient-qlist-soft.md  README-missing-qobject  README-missing-qobject.md  README-non-pod-global-static  README-non-pod-global-static.md  README-qdeleteall.md  README-qlatin1string-encoding.md  README-range-loop.md  README-returning-data-from-temporary.md  README-rule-of-two-soft.md  README-tr-non-literal.md  base-class-event.cpp  base-class-event.h  copyable-polymorphic.cpp  ctor-missing-parent-argument.cpp  detachingtemporary.h  foreach.cpp  incorrect-emit.cpp  incorrect-emit.h  inefficient-qlist-soft.cpp  inefficient-qlist-soft.h  missing-qobject-macro.cpp  missing-qobject-macro.h  nonpodstatic.cpp  nonpodstatic.h  qdeleteall.cpp  qlatin1string-non-ascii.h  range-loop.cpp  returning-data-from-temporary.h  ruleoftwosoft.cpp  tr-non-literal.cpp  tr-non-literal.h
checks/level2/: README-base-class-event.md  README-container-inside-loop  README-container-inside-loop.md  README-function-args-by-ref  README-function-args-by-ref.md  README-function-args-by-value.md  README-global-const-char-pointer.md  README-implicit-casts  README-implicit-casts.md  README-missing-type-info.md  README-old-style-connect  README-old-style-connect.md  README-qstring-allocations.md  README-reserve-candidates  README-reserve-candidates.md  README-rule-of-three.md  README-rule-of-two-soft  README-rule-of-two-soft.md  README-virtual-call-ctor.md  container-inside-loop.cpp  (+24 more)
cmake/: FindClang.cmake  FindLLVM.cmake  gitversion.cmake
dev-scripts/: README  clazy-create-global-ast.py  generate.py  generate_test_compile_commands.py  make_appimage.py  make_windows_package.py  miniAstDumper.py  test_build_on_distros.sh
docs/man/: CMakeLists.txt  clazy.pod
msvc_support/: clazy-cl.bat  clazy-clang.bat
patches/: 0001-Bake-clazy-into-clang-so-that-it-works-with-MSVC.patch
scripts/: fix_json_database.py
src/: AccessSpecifierManager.cpp  AccessSpecifierManager.h  Checks.h  Clazy.cpp  Clazy.h  ClazyAnchorHeader.h  ClazyClangTidyModule.cpp  ClazyContext.cpp  ClazyContext.h  ClazyStandaloneMain.cpp  ClazyVisitHelper.cpp  ClazyVisitHelper.h  ContextUtils.cpp  ContextUtils.h  FixItExporter.cpp  FixItExporter.h  FixItUtils.cpp  FixItUtils.h  FunctionUtils.h  HierarchyUtils.cpp  HierarchyUtils.h  LoopUtils.cpp  LoopUtils.h  MacroUtils.h  MiniAstDumper.cpp  MiniAstDumper.h  NormalizedSignatureUtils.h  PreProcessorVisitor.cpp  PreProcessorVisitor.h  QtUtils.cpp  QtUtils.h  SourceCompatibilityHelpers.h  StmtBodyRange.h  StringUtils.cpp  StringUtils.h  SuppressionManager.cpp  SuppressionManager.h  TemplateUtils.cpp  TemplateUtils.h  TypeUtils.cpp  (+9 more)
tests/: .clang-format  cmath-bug.cpp  run_tests.py  run_tests.sh
windows-package/: README.txt  clazy-cl.bat  clazy.bat
(+1094 files in other folders)
